OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.9.0 (2020-04-??)
------------------
Refactorings:
- ALL: Tightened Source creation to cover for non validated input.
- WC: Refactored ajax handling to make it usable in other shops as well.
- ALL: Move class Siel\Acumulus\WooCommerce\Shop\InvoiceStatusOverviewForm (and
  Siel\Acumulus\WooCommerce\Shop\InvoiceStatusOverviewFormTranslations) to
  Siel\Acumulus\Shop\InvoiceStatusForm (resp.
  Siel\Acumulus\Shop\InvoiceStatusFormTranslations).
- WC: Extract checking for the Woocommerce version into a separate method.
- MA2: Extract helper and access to it into a "Helper" trait.
- MA2: Allow to work with symlinks.
- MA2: Schema locations in xml files.
- ALL: Add required PHP extensions to composer.json.
- ALL: removed method Source::getPaymentState() (deprecated since 5.4).

5.8.3 (2020-03-22)
------------------
Bugs:
- WC: Support for the "WooCommerce TM Extra Product Options" plugin updated so
  it also works with the latest versions.

Refactorings:
- WC: Do not use query_posts().
- WC: Performance: switched to using get_plugins() instead of get_plugin_data()
  as the former caches its data.
- ALL : Documentation improvements

5.8.2 (2020-01-19)
------------------
Features:
- WC: Vraag gebruikers om de plugin te beoordelen op de WP plugin directory.
- ALL: Add the form type as data to an ajax button.
- ALL: Allows to not render an empty form label.

5.8.1 (2020-01-07)
------------------
Bugs:
- OC1: Multiple errors in OC1 getTotalLineTaxClassLookupQuery() leading to mal
  constructed queries.
- OC1: setting config_complete_status is not an array in OC1 and thus cannot be
  used for determining the payment status.